--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="dark_blue">#0d253f</color>
+    <color name="light_blue">#01b4e4</color>
+    <color name="light_green">#90cea1</color>
+    <color name="light_gray">#f2f3f7</color>
+    <color name="middle_gray">#e6e6e6</color>
+
+
 </resources>
